tests/fixtures/valid/ngl008_valid.py
from nicegui import ui


def on_click() -> None:
    ui.notify('done')


ui.button('Go', on_click=on_click)
